Make it work with React

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,5 @@
-<style>
-body {
-  margin: 0;
-  padding: 0;
-}
-</style>
+<title>react-color-wander</title>
+
+<link href="//cdn.materialdesignicons.com/2.2.43/css/materialdesignicons.min.css" rel="stylesheet">
 
 <div id="root"></div>
-
-<canvas id="canvas"></canvas>
