Limit to a single map/palette + improve example

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,27 @@
-<title>react-color-wander</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link href="//cdn.materialdesignicons.com/2.2.43/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-<div id="root"></div>
+    <title>Color Wander</title>
+  </head>
+
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+
+    <div id="root"></div>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78243708-6"></script>
+    <script>/* eslint-disable */
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'UA-78243708-11');
+    </script>
+  </body>
+</html>
